--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.5.0
+bcrypt==3.2.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==36.0.2
+defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==4.0.2
+django-allauth==0.49.0
 django-crispy-forms==1.14.0
 django-environ==0.8.1
+django-on-heroku==1.1.2
+django-phonenumber-field==6.1.0
 gunicorn==20.1.0
+idna==3.3
+oauthlib==3.2.0
+phonenumberslite==8.12.43
 Pillow==9.0.1
+psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.3.0
+python3-openid==3.2.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+six==1.16.0
 soupsieve==2.3.1
 sqlparse==0.4.2
+urllib3==1.26.9
+whitenoise==6.0.0
